fixed button and removed 2% padding on the global not nav button styling, as it was pushing the text on the form submit button down past the vertical middle alignment on vw resize.

--- a/src/partials/_form.scss
+++ b/src/partials/_form.scss
@@ -41,9 +41,9 @@ form.reviewForm {
 
 
 
-    button {
+    .submitButton {
         margin-bottom: 5rem;
-        
+        width: 25%;
     }
 }
 
