--- a/src/partials/_global.scss
+++ b/src/partials/_global.scss
@@ -51,7 +51,6 @@ button:not(.navButton) {
         border-radius: 25px;
         width: 100%;
         height: 5rem;
-        padding: 2%;
         background: rgb(123, 224, 173);
         background: linear-gradient(90deg, rgba(123, 224, 173, 1) 0%, rgba(174, 229, 216, 1) 35%, rgba(231, 229, 229, 1) 100%);
         @include fluid-type (1.5rem, 2rem, 360px, 1280px);
